Fix: Replace .toList() with Collectors.toList() for Java 8+ compatibility